Fix global layout issues (#849)

--- a/src/styles/base/generic.sass
+++ b/src/styles/base/generic.sass
@@ -1,7 +1,6 @@
 @import "../utilities/mixins"
 
 $body-background-color: $scheme-main
-$body-min-width: 300px
 $body-rendering: optimizeLegibility
 $body-family: $family-primary
 
@@ -32,7 +31,6 @@ html
   background-color: $body-background-color
   -moz-osx-font-smoothing: grayscale
   -webkit-font-smoothing: antialiased
-  min-width: $body-min-width
   text-rendering: $body-rendering
   text-size-adjust: 100%
 
